Edit Mesh: X-Mirror/Topology Mirror not working #57852

Closed
opened 2018-11-15 14:56:57 +01:00 by Pablo Vazquez · 39 comments
Member

System Information
Ubuntu 17.10 Nvidia GTX 1050

Blender Version
Broken: 2.80.30 bdca863956
Worked: 2.79b

Short description of error
X-mirror and Topology mirror seem to fail even in the simplest cases.

Exact steps for others to reproduce the error
image.png
xmirror_blender28.blend

  • Open .blend, a symmetric cube is in edit mode with some vertices selected and x-mirror on
  • Move the vertices, the opposite side in X is not moving.
**System Information** Ubuntu 17.10 Nvidia GTX 1050 **Blender Version** Broken: 2.80.30 bdca8639569 Worked: 2.79b **Short description of error** X-mirror and Topology mirror seem to fail even in the simplest cases. **Exact steps for others to reproduce the error** ![image.png](https://archive.blender.org/developer/F5570013/image.png) [xmirror_blender28.blend](https://archive.blender.org/developer/F5569989/xmirror_blender28.blend) * Open .blend, a symmetric cube is in edit mode with some vertices selected and x-mirror on * Move the vertices, the opposite side in X is not moving.
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez

#60435 was marked as duplicate of this issue

#60435 was marked as duplicate of this issue

#60239 was marked as duplicate of this issue

#60239 was marked as duplicate of this issue

#59402 was marked as duplicate of this issue

#59402 was marked as duplicate of this issue

#59291 was marked as duplicate of this issue

#59291 was marked as duplicate of this issue

#59212 was marked as duplicate of this issue

#59212 was marked as duplicate of this issue

#59233 was marked as duplicate of this issue

#59233 was marked as duplicate of this issue

#58886 was marked as duplicate of this issue

#58886 was marked as duplicate of this issue

#58864 was marked as duplicate of this issue

#58864 was marked as duplicate of this issue

#58800 was marked as duplicate of this issue

#58800 was marked as duplicate of this issue

#58757 was marked as duplicate of this issue

#58757 was marked as duplicate of this issue

#58623 was marked as duplicate of this issue

#58623 was marked as duplicate of this issue

#58154 was marked as duplicate of this issue

#58154 was marked as duplicate of this issue

#58152 was marked as duplicate of this issue

#58152 was marked as duplicate of this issue
Pablo Vazquez changed title from Edit Mesh: X-Mirror not working to Edit Mesh: X-Mirror/Topology Mirror not working 2018-11-15 14:57:33 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

There is D3869 already (and kind of WIP/WorkInDiscussion atm.)

Hope to get back to that Differential soonish

There is [D3869](https://archive.blender.org/developer/D3869) already (and kind of WIP/WorkInDiscussion atm.) Hope to get back to that Differential soonish
Author
Member

Oh it's not tagged, that's why. I did a search for it with the Blender2.8 tag and found nothing :)

Thanks for having a look at it already. I mentioned it in the last meeting and I understood it was unreported. You can close this or keep it as reference since this is an actual bug report.

Oh it's not tagged, that's why. I did a search for it with the Blender2.8 tag and found nothing :) Thanks for having a look at it already. I mentioned it in the last meeting and I understood it was unreported. You can close this or keep it as reference since this is an actual bug report.
Member

Added subscriber: @vuiquahuhu

Added subscriber: @vuiquahuhu

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber

Added subscriber: @jeacom

Added subscriber: @jeacom
Author
Member

Added subscribers: @macagu, @JonMcKay

Added subscribers: @macagu, @JonMcKay

Added subscriber: @stevewarner

Added subscriber: @stevewarner

Added subscriber: @Dragon.Studio

Added subscriber: @Dragon.Studio
Philipp Oeser self-assigned this 2018-12-06 11:07:23 +01:00
Member

Since there is D3869 already, I'll claim for now...

Since there is [D3869](https://archive.blender.org/developer/D3869) already, I'll claim for now...

Added subscriber: @nomad1983

Added subscriber: @nomad1983

Added subscriber: @PabloEmanuelAmbrosio

Added subscriber: @PabloEmanuelAmbrosio

Added subscriber: @FredLierman

Added subscriber: @FredLierman
Member

Added subscriber: @JorgeMolina

Added subscriber: @JorgeMolina
Member
Added subscribers: @EdgardAntonioCalimanoliveira, @ideasman42

Added subscriber: @HADESBLACK

Added subscriber: @HADESBLACK

Added subscriber: @spinear

Added subscriber: @spinear

Any news about the mesh mirror functionality?

Any news about the mesh mirror functionality?

Added subscribers: @Ekiwnox, @brecht

Added subscribers: @Ekiwnox, @brecht
Member

@HADESBLACK (and everyone else interested): it is currently being discussed [in D3869] if moving the per-mesh-option to a tool seeting (that would work the same for every object selected).
This has pros and cons, feel free to leave a comment in D3869 what is preferred here, once a decision is made, it shouldnt be too long to have it finally implemented...

@HADESBLACK (and everyone else interested): it is currently being discussed [in [D3869](https://archive.blender.org/developer/D3869)] if moving the per-mesh-option to a tool seeting (that would work the same for every object selected). This has pros and cons, feel free to leave a comment in [D3869](https://archive.blender.org/developer/D3869) what is preferred here, once a decision is made, it shouldnt be too long to have it finally implemented...

Added subscriber: @richeyrose

Added subscriber: @richeyrose

This issue was referenced by 65b82e09d9

This issue was referenced by 65b82e09d94e77f7d8fb079f24fe82aee8e2509e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Hey !
Have a weird bug with a normal map texture and I'm not sure if it's linked to this problem.

First I modeled the object bellow really fast and I had weird shapes/shadows on the object on Eevee and Cycle without any texture. I first thought It was maybe a doubles points so I remove every double points but nothing changed. I also made the normal consistant but nothing happened. Finally I remodeled the whole object more clean, but same issue. This time the object seems nice on Eevee and Cycle but once I put a normal map, it lags again. I've checked all my texture and everything seems perfect. I've used mirror to do this model, that's why I thought that this issue could be linked to this issue.

I'm on MacOs Mojave / NVIDIAGeForece GT 650M 1024 MB and Intel HD Graphics 4000 1536 MB

bug_test.blend
Screenshot 2019-01-22 at 19.09.23.png

Hey ! Have a weird bug with a normal map texture and I'm not sure if it's linked to this problem. First I modeled the object bellow really fast and I had weird shapes/shadows on the object on Eevee and Cycle without any texture. I first thought It was maybe a doubles points so I remove every double points but nothing changed. I also made the normal consistant but nothing happened. Finally I remodeled the whole object more clean, but same issue. This time the object seems nice on Eevee and Cycle but once I put a normal map, it lags again. I've checked all my texture and everything seems perfect. I've used mirror to do this model, that's why I thought that this issue could be linked to this issue. I'm on MacOs Mojave / NVIDIAGeForece GT 650M 1024 MB and Intel HD Graphics 4000 1536 MB [bug_test.blend](https://archive.blender.org/developer/F6369932/bug_test.blend) ![Screenshot 2019-01-22 at 19.09.23.png](https://archive.blender.org/developer/F6369927/Screenshot_2019-01-22_at_19.09.23.png)

@Ekiwnox this issue is resolved, open a new issue, refer to this if necessary.

@Ekiwnox this issue is resolved, open a new issue, refer to this if necessary.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57852
No description provided.