Fix T57852: Mesh X Mirror option not working

D3869 by @lichtwerk w/ own edits